# reproject-geometry

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  reprojected.json  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/source/: api.rst  conf.py  index.rst
src/reproject/: cli.py  reproject.py
src/reproject_geometry/: cli.py  reproject.py
tests/: test_reproject.py  test_unit_conversion.py  test_utils.py
tests/data-files/: HLS.S30.T19LDD.2022166T144741.v2.0.B09_epsg_32619.json  viirs_h11v05_sinusoidal.json
