[metadata]
name = reproject-geometry
author = preston.hartzell@gmail.com

[options]
package_dir =
    = src
packages = find:
install_requires = 
    click
    rasterio
    shapely

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    reproject = reproject.cli:cli

[global]
no-binary = rasterio