[metadata]
name = reproject-geometry
version = attr: reproject.__version__
author = preston.hartzell@gmail.com

[options]
package_dir =
    = src
packages = find:
install_requires = 
    click >= 8.1.3
    rasterio >= 1.2.10
    shapely >= 1.8.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    reproject = reproject.cli:cli
